src/objects/Examination__c.object
<CustomObject>
    <description>Details of the Exams</description>
    <fields>
        <fullName>Achievement_Rate__c</fullName>
        <label>Achievement_Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <description>Stores link where the image is located.</description>
        <label>Badge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date when the exam was created.</description>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Examination Name</description>
        <label>Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Passing_Rate__c</fullName>
        <description>Passing rate for the exam.</description>
        <label>Passing_Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promotion_Text__c</fullName>
        <description>Lists related Salesforce.com URLs.</description>
        <label>Promotion_Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_ID__c</fullName>
        <description>Lists all questions tagged for the exam.</description>
        <label>Question_ID</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Examination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Description1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Examination_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>